Adding backend Part

--- a/Server/.env
+++ b/Server/.env
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="mongodb+srv://Ankulraja2003:NYWs4vVtlTyFKoos@cluster0.i8hr5er.mongodb.net/Task-Management"
+DATABASE_URL="mongodb+srv://Ankulraja2003:NYWs4vVtlTyFKoos@cluster0.i8hr5er.mongodb.net/EcoSite"
 PORT=8080
 
  
